Fix hyperfeed scaling on mobile

--- a/src/assets/css/source.css
+++ b/src/assets/css/source.css
@@ -438,11 +438,11 @@
     }
 
     .hyperfeed {
-        @apply flex flex-col items-center;
+        @apply md:flex flex-col items-center;
     }
 
     .hyperpost {
-        @apply bg-[#cee3f8] dark:bg-[#456d95] p-5 my-3 border border-solid border-[#456d95] dark:border-[#173450] font-sans shadow-hyper-light dark:shadow-hyper-dark mx-0 min-w-[550px];
+        @apply bg-[#cee3f8] dark:bg-[#456d95] p-5 my-3 border border-solid border-[#456d95] dark:border-[#173450] font-sans shadow-hyper-light dark:shadow-hyper-dark mx-0 md:min-w-[550px];
     }
 
     .hyperpost p {
@@ -450,34 +450,34 @@
     }
 
     .hyperfeed .hyperpost:nth-child(10n) {
-        margin-left: -18px;
+        @apply md:-ml-[18px];
     }
     .hyperfeed .hyperpost:nth-child(10n + 1) {
-        margin-left: 18px;
+        @apply md:ml-[18px];
     }
     .hyperfeed .hyperpost:nth-child(10n + 2) {
-        margin-left: -32px;
+        @apply md:-ml-[32px]
     }
     .hyperfeed .hyperpost:nth-child(10n + 3) {
-        margin-left: -8px;
+        @apply md:-ml-[8px];
     }
     .hyperfeed .hyperpost:nth-child(10n + 4) {
-        margin-left: -38px;
+        @apply md:-ml-[38px];
     }
     .hyperfeed .hyperpost:nth-child(10n + 5) {
-        margin-left: 28px;
+        @apply md:ml-[28px];
     }
     .hyperfeed .hyperpost:nth-child(10n + 6) {
-        margin-left: -18px;
+        @apply md:-ml-[18px];
     }
     .hyperfeed .hyperpost:nth-child(10n + 7) {
-        margin-left: 18px;
+        @apply md:ml-[18px];
     }
     .hyperfeed .hyperpost:nth-child(10n + 8) {
-        margin-left: -8px;
+        @apply md:-ml-[8px];
     }
     .hyperfeed .hyperpost:nth-child(10n + 9) {
-        margin-left: 32px;
+        @apply md:ml-[32px];
     }
 
     .microblog_timeline {
